fixed text overlaping in collaspe navbar when the user is not signed in. fixed text overlapping the image in the product card. fixed issue on iPhone se with filterbar not being completely hidding

--- a/client/src/Components/CollaspeNav/CollaspeNav.scss
+++ b/client/src/Components/CollaspeNav/CollaspeNav.scss
@@ -33,9 +33,15 @@
     text-align: center;
     font-size: 2rem;
 }
+
 .CollaspeBar{
     background: #943d24;
     height: 3.5rem;
+}
+
+.btNotLogIn{
+    background: #943d24;
+    height: 15vh;
 }
 .closeBtn{
     position: absolute;
@@ -50,6 +56,10 @@
 .catGroup{
   border-top: 1px solid gray;
   border-bottom: 1px solid gray;
+}
+.catHeader{
+    font-weight: 800;
+    font-family: cursive;
 }
 .accountBtn{
     margin-top: 5px;
