--- a/client/src/Components/Product/Product.scss
+++ b/client/src/Components/Product/Product.scss
@@ -151,6 +151,7 @@
     width: 300px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 50px;
    
   }
   .priceCard{
