--- a/client/src/Pages/ProductList/ProductList.scss
+++ b/client/src/Pages/ProductList/ProductList.scss
@@ -28,7 +28,7 @@
     margin-left: auto;
     margin-right: auto;
     top: 40px;
-    width: 20%;
+    width: 20vw;
     height: 2.5rem;
     border-right: 2px solid $primary-color;
     border-left: 2px solid $primary-color;
@@ -92,10 +92,31 @@
         transform: translateY(0%);
     }
 }
+@media screen and (max-width:1100px){
+    .FilterTitle{
+        width: 40vw;
+    }
+    
+}
+
+@media screen and (max-width:600px){
+    .FilterTitle{
+        width: 50vw;
+    }
+    
+}
 
 @media screen and (max-width:280px){
     .FilterTitle{
         width: 60vw;
     }
     
+}
+
+//iPhone SE
+
+@media screen and (max-width: 390),  screen and (max-height: 667px) {
+    .FilterBar{
+        bottom: 15vh !important;
+    }
 }
